--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,9 @@
 		<script src="app/app.module.js"></script>
 		<script src="app/account/account.module.js"></script>
 		<script src="app/chats/chats.module.js"></script>
+		<script src="app/contacts/contacts.module.js"></script>
 		<script src="app/core/app.core.module.js"></script>
-		<script src="app/dash/dash.module.js"></script>
+		<script src="app/events/events.module.js"></script>
 		<script src="app/account/account.controller.js"></script>
 		<script src="app/account/account.routes.js"></script>
 		<script src="app/app.config.js"></script>
@@ -62,8 +63,12 @@
 		<script src="app/chats/chats.controller.js"></script>
 		<script src="app/chats/chats.routes.js"></script>
 		<script src="app/chats/chats.service.js"></script>
-		<script src="app/dash/dash.controller.js"></script>
-		<script src="app/dash/dash.routes.js"></script>
+		<script src="app/contacts/contacts.controller.js"></script>
+		<script src="app/contacts/contacts.routes.js"></script>
+		<script src="app/contacts/contacts.service.js"></script>
+		<script src="app/events/events.controller.js"></script>
+		<script src="app/events/events.routes.js"></script>
+		<script src="app/events/events.service.js"></script>
 		<!-- endinject -->
 
 		<!-- inject:templates:js -->
