--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
 		<script src="app/account/account.module.js"></script>
 		<script src="app/contacts/contacts.module.js"></script>
 		<script src="app/core/app.core.module.js"></script>
+		<script src="app/events/event-detail/event-detail.module.js"></script>
 		<script src="app/events/events-create/events-create-invite/events-create-invite.module.js"></script>
 		<script src="app/events/events-create/events-create.module.js"></script>
 		<script src="app/events/events.module.js"></script>
@@ -63,6 +64,8 @@
 		<script src="app/contacts/contacts.controller.js"></script>
 		<script src="app/contacts/contacts.routes.js"></script>
 		<script src="app/contacts/contacts.service.js"></script>
+		<script src="app/events/event-detail/event-detail.controller.js"></script>
+		<script src="app/events/event-detail/event-detail.routes.js"></script>
 		<script src="app/events/events-create/events-create-invite/events-create-invite.controller.js"></script>
 		<script src="app/events/events-create/events-create-invite/events-create-invite.routes.js"></script>
 		<script src="app/events/events-create/events-create.controller.js"></script>
