Hide tab bar when needed

--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
 		<script src="app/contacts/contacts.controller.js"></script>
 		<script src="app/contacts/contacts.routes.js"></script>
 		<script src="app/contacts/contacts.service.js"></script>
+		<script src="app/directives/hideTabs.directive.js"></script>
 		<script src="app/events/event-detail/event-detail.controller.js"></script>
 		<script src="app/events/event-detail/event-detail.routes.js"></script>
 		<script src="app/events/events-create/events-create-invite/events-create-invite.controller.js"></script>
