--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
 		<script src="app/contacts/contacts.module.js"></script>
 		<script src="app/core/app.core.module.js"></script>
 		<script src="app/events/event-detail/event-detail.module.js"></script>
+		<script src="app/events/event-detail/events-detail-edit/events-detail-edit.module.js"></script>
 		<script src="app/events/events-create/events-create-invite/events-create-invite.module.js"></script>
 		<script src="app/events/events-create/events-create.module.js"></script>
 		<script src="app/events/events.module.js"></script>
@@ -67,6 +68,8 @@
 		<script src="app/directives/hideTabs.directive.js"></script>
 		<script src="app/events/event-detail/event-detail.controller.js"></script>
 		<script src="app/events/event-detail/event-detail.routes.js"></script>
+		<script src="app/events/event-detail/events-detail-edit/events-detail-edit.controller.js"></script>
+		<script src="app/events/event-detail/events-detail-edit/events-detail-edit.routes.js"></script>
 		<script src="app/events/events-create/events-create-invite/events-create-invite.controller.js"></script>
 		<script src="app/events/events-create/events-create-invite/events-create-invite.routes.js"></script>
 		<script src="app/events/events-create/events-create.controller.js"></script>
