Configure abstract routes

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
 		<!-- inject:js -->
 		<script src="app/app.module.js"></script>
 		<script src="app/account/account.module.js"></script>
+		<script src="app/contacts/contacts-add/contacts-add.module.js"></script>
 		<script src="app/contacts/contacts.module.js"></script>
 		<script src="app/core/app.core.module.js"></script>
 		<script src="app/events/event-detail/event-detail.module.js"></script>
@@ -63,6 +64,8 @@
 		<script src="app/app.config.js"></script>
 		<script src="app/app.routes.js"></script>
 		<script src="app/app.run.js"></script>
+		<script src="app/contacts/contacts-add/contact-add.routes.js"></script>
+		<script src="app/contacts/contacts-add/contacts-add.controller.js"></script>
 		<script src="app/contacts/contacts.controller.js"></script>
 		<script src="app/contacts/contacts.routes.js"></script>
 		<script src="app/contacts/contacts.service.js"></script>
