--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
 		<script src="app/events/event-detail/event-detail.module.js"></script>
 		<script src="app/events/event-detail/events-detail-edit/events-detail-edit.module.js"></script>
 		<script src="app/events/event-detail/events-detail-invite/events-detail-invite.module.js"></script>
+		<script src="app/events/event-detail/events-detail-invited/events-detail-invited.module.js"></script>
 		<script src="app/events/events-create/events-create-invite/events-create-invite.module.js"></script>
 		<script src="app/events/events-create/events-create.module.js"></script>
 		<script src="app/events/events.module.js"></script>
@@ -76,6 +77,8 @@
 		<script src="app/events/event-detail/events-detail-edit/events-detail-edit.routes.js"></script>
 		<script src="app/events/event-detail/events-detail-invite/events-detail-invite.controller.js"></script>
 		<script src="app/events/event-detail/events-detail-invite/events-detail-invite.routes.js"></script>
+		<script src="app/events/event-detail/events-detail-invited/events-detail-invited.controller.js"></script>
+		<script src="app/events/event-detail/events-detail-invited/events-detail-invited.routes.js"></script>
 		<script src="app/events/events-create/events-create-invite/events-create-invite.controller.js"></script>
 		<script src="app/events/events-create/events-create-invite/events-create-invite.routes.js"></script>
 		<script src="app/events/events-create/events-create.controller.js"></script>
