Configure and include module

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
 		<script src="app/events/events-create/events-create-invite/events-create-invite.module.js"></script>
 		<script src="app/events/events-create/events-create.module.js"></script>
 		<script src="app/events/events.module.js"></script>
+		<script src="app/registration/registation.module.js"></script>
 		<script src="app/account/account.controller.js"></script>
 		<script src="app/account/account.routes.js"></script>
 		<script src="app/app.config.js"></script>
@@ -86,6 +87,8 @@
 		<script src="app/events/events.controller.js"></script>
 		<script src="app/events/events.routes.js"></script>
 		<script src="app/events/events.service.js"></script>
+		<script src="app/registration/registration.controller.js"></script>
+		<script src="app/registration/registration.routes.js"></script>
 		<!-- endinject -->
 
 		<!-- inject:templates:js -->
