--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,8 @@
 		<!-- build:js js/lib.js -->
 		<!-- bower:js -->
 		<script src="lib/angular-messages/angular-messages.js"></script>
+		<script src="lib/angular-cookie/angular-cookie.js"></script>
+		<script src="lib/ng-token-auth/dist/ng-token-auth.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -90,6 +92,8 @@
 		<script src="app/registration/registration.controller.js"></script>
 		<script src="app/registration/registration.routes.js"></script>
 		<!-- endinject -->
+		<script src="/js/angular-cookie/angular-cookie.js"></script>
+		<script src="/js/ng-token-auth/dist/ng-token-auth.js"></script>
 
 		<!-- inject:templates:js -->
 		<!-- endinject -->
