--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,6 @@
 		<!-- build:js js/lib.js -->
 		<!-- bower:js -->
 		<script src="lib/angular-messages/angular-messages.js"></script>
-		<script src="lib/angular-cookie/angular-cookie.js"></script>
-		<script src="lib/ng-token-auth/dist/ng-token-auth.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 
@@ -52,6 +50,7 @@
 		<!-- inject:js -->
 		<script src="app/app.module.js"></script>
 		<script src="app/account/account.module.js"></script>
+		<script src="app/authentication/authentication.module.js"></script>
 		<script src="app/contacts/contacts-add/contacts-add.module.js"></script>
 		<script src="app/contacts/contacts.module.js"></script>
 		<script src="app/core/app.core.module.js"></script>
@@ -68,6 +67,8 @@
 		<script src="app/app.config.js"></script>
 		<script src="app/app.routes.js"></script>
 		<script src="app/app.run.js"></script>
+		<script src="app/authentication/authentication.controller.js"></script>
+		<script src="app/authentication/authentication.routes.js"></script>
 		<script src="app/contacts/contacts-add/contact-add.routes.js"></script>
 		<script src="app/contacts/contacts-add/contacts-add.controller.js"></script>
 		<script src="app/contacts/contacts.controller.js"></script>
