Modify SignIn function to save user id using Session Service

--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,7 @@
 		<script src="app/events/events.service.js"></script>
 		<script src="app/registration/registration.controller.js"></script>
 		<script src="app/registration/registration.routes.js"></script>
+		<script src="app/session/session.service.js"></script>
 		<!-- endinject -->
 		<script src="lib/angular-cookie/angular-cookie.js"></script>
 		<script src="lib/ng-token-auth/dist/ng-token-auth.js"></script>
