Add functionality to invite friends

--- a/src/index.html
+++ b/src/index.html
@@ -100,5 +100,6 @@
 		<!-- inject:templates:js -->
 		<!-- endinject -->
 		<!-- endbuild -->
+		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.10.0/lodash.min.js"></script>
 	</body>
 </html>
