Do first socket experiment

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 		<script src="lib/angular-messages/angular-messages.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
-
+		<script src="http://localhost:9292/faye.js"></script>
 		<!-- build:js js/app.js -->
 		<!-- inject:js -->
 		<script src="app/app.module.js"></script>
