--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,8 @@
 		<!-- build:js js/lib.js -->
 		<!-- bower:js -->
 		<script src="lib/angular-messages/angular-messages.js"></script>
+		<script src="lib/moment/moment.js"></script>
+		<script src="lib/angular-moment/angular-moment.js"></script>
 		<!-- endbower -->
 		<!-- endbuild -->
 		<script src="http://localhost:9292/faye.js"></script>
