--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 			The nav bar that will be updated as we navigate between views.
 		-->
 		<ion-nav-bar class="bar red-background white-text">
-			<ion-nav-back-button>
+			<ion-nav-back-button class="white-text">
 			</ion-nav-back-button>
 		</ion-nav-bar>
 		<!--
