Format assist limit display

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
 		<script src="app/contacts/contacts.module.js"></script>
 		<script src="app/core/app.core.module.js"></script>
 		<script src="app/events/event-detail/event-detail.module.js"></script>
+		<script src="app/events/event-detail/events-detail-description/events-detail-description.module.js"></script>
 		<script src="app/events/event-detail/events-detail-edit/events-detail-edit.module.js"></script>
 		<script src="app/events/event-detail/events-detail-invite/events-detail-invite.module.js"></script>
 		<script src="app/events/event-detail/events-detail-invited/events-detail-invited.module.js"></script>
@@ -75,8 +76,11 @@
 		<script src="app/contacts/contacts.routes.js"></script>
 		<script src="app/contacts/contacts.service.js"></script>
 		<script src="app/directives/hideTabs.directive.js"></script>
+		<script src="app/directives/infinite.direcive.js"></script>
 		<script src="app/events/event-detail/event-detail.controller.js"></script>
 		<script src="app/events/event-detail/event-detail.routes.js"></script>
+		<script src="app/events/event-detail/events-detail-description/events-detail-description.controller.js"></script>
+		<script src="app/events/event-detail/events-detail-description/events-detail-description.routes.js"></script>
 		<script src="app/events/event-detail/events-detail-edit/events-detail-edit.controller.js"></script>
 		<script src="app/events/event-detail/events-detail-edit/events-detail-edit.routes.js"></script>
 		<script src="app/events/event-detail/events-detail-invite/events-detail-invite.controller.js"></script>
@@ -90,6 +94,7 @@
 		<script src="app/events/events.controller.js"></script>
 		<script src="app/events/events.routes.js"></script>
 		<script src="app/events/events.service.js"></script>
+		<script src="app/filters/assistLimit.filter.js"></script>
 		<script src="app/registration/registration.controller.js"></script>
 		<script src="app/registration/registration.routes.js"></script>
 		<script src="app/session/session.service.js"></script>
