Hide headers on empty lists

--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,9 @@
 		<script src="app/events/events.routes.js"></script>
 		<script src="app/events/events.service.js"></script>
 		<script src="app/filters/assistLimit.filter.js"></script>
+		<script src="app/filters/friends.filter.js"></script>
+		<script src="app/filters/requestsRecieved.filter.js"></script>
+		<script src="app/filters/requestsSent.filter.js"></script>
 		<script src="app/registration/registration.controller.js"></script>
 		<script src="app/registration/registration.routes.js"></script>
 		<script src="app/session/session.service.js"></script>
