--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,9 @@
 		<script src="lib/angular-messages/angular-messages.js"></script>
 		<script src="lib/moment/moment.js"></script>
 		<script src="lib/angular-moment/angular-moment.js"></script>
+		<script src="lib/angular-recaptcha/release/angular-recaptcha.js"></script>
 		<!-- endbower -->
+		<script src='https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit' async defer></script>
 		<!-- endbuild -->
 		<script src="http://localhost:9292/faye.js"></script>
 		<!-- build:js js/app.js -->
