--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,7 @@
 		<script src="app/events/events-create/events-create-invite/events-create-invite.module.js"></script>
 		<script src="app/events/events-create/events-create.module.js"></script>
 		<script src="app/events/events.module.js"></script>
+		<script src="app/helpers/helpers.module.js"></script>
 		<script src="app/registration/registation.module.js"></script>
 		<script src="app/account/account.controller.js"></script>
 		<script src="app/account/account.routes.js"></script>
@@ -100,6 +101,7 @@
 		<script src="app/filters/friends.filter.js"></script>
 		<script src="app/filters/requestsRecieved.filter.js"></script>
 		<script src="app/filters/requestsSent.filter.js"></script>
+		<script src="app/helpers/error.service.js"></script>
 		<script src="app/registration/registration.controller.js"></script>
 		<script src="app/registration/registration.routes.js"></script>
 		<script src="app/session/session.service.js"></script>
