Prepare for oscar

--- a/src/index.html
+++ b/src/index.html
@@ -27,10 +27,12 @@
 		<!--
 			The nav bar that will be updated as we navigate between views.
 		-->
-		<ion-nav-bar class="bar red-background white-text">
+		<ion-nav-bar  class="bar red-background white-text">
 			<ion-nav-back-button class="white-text">
 			</ion-nav-back-button>
+
 		</ion-nav-bar>
+		
 		<!--
 			The views will be rendered in the <ion-nav-view> directive below
 			Templates are in the /templates folder (but you could also
@@ -66,6 +68,7 @@
 		<script src="app/events/events.module.js"></script>
 		<script src="app/helpers/helpers.module.js"></script>
 		<script src="app/registration/registation.module.js"></script>
+		<script src="app/services/services.module.js"></script>
 		<script src="app/account/account.controller.js"></script>
 		<script src="app/account/account.routes.js"></script>
 		<script src="app/app.config.js"></script>
@@ -78,6 +81,7 @@
 		<script src="app/contacts/contacts.controller.js"></script>
 		<script src="app/contacts/contacts.routes.js"></script>
 		<script src="app/contacts/contacts.service.js"></script>
+		<script src="app/directives/event-remover.directives.js"></script>
 		<script src="app/directives/hideTabs.directive.js"></script>
 		<script src="app/directives/infinite.direcive.js"></script>
 		<script src="app/events/event-detail/event-detail.controller.js"></script>
@@ -104,6 +108,7 @@
 		<script src="app/helpers/error.service.js"></script>
 		<script src="app/registration/registration.controller.js"></script>
 		<script src="app/registration/registration.routes.js"></script>
+		<script src="app/services/values.service.js"></script>
 		<script src="app/session/session.service.js"></script>
 		<!-- endinject -->
 		<script src="lib/angular-cookie/angular-cookie.js"></script>
