Before changing the arquitecture

--- a/src/index.html
+++ b/src/index.html
@@ -108,6 +108,7 @@
 		<script src="app/helpers/error.service.js"></script>
 		<script src="app/registration/registration.controller.js"></script>
 		<script src="app/registration/registration.routes.js"></script>
+		<script src="app/services/socket-message-handler.service.js"></script>
 		<script src="app/services/values.service.js"></script>
 		<script src="app/session/session.service.js"></script>
 		<!-- endinject -->
