--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,9 @@
 		<!-- build:js js/app.js -->
 		<!-- inject:js -->
 		<script src="app/app.module.js"></script>
+		<script src="app/account/about/about.module.js"></script>
 		<script src="app/account/account.module.js"></script>
+		<script src="app/account/terms/terms.module.js"></script>
 		<script src="app/authentication/authentication.module.js"></script>
 		<script src="app/contacts/contacts-add/contacts-add.module.js"></script>
 		<script src="app/contacts/contacts.module.js"></script>
@@ -69,8 +71,12 @@
 		<script src="app/helpers/helpers.module.js"></script>
 		<script src="app/registration/registation.module.js"></script>
 		<script src="app/services/services.module.js"></script>
+		<script src="app/account/about/about.controller.js"></script>
+		<script src="app/account/about/about.routes.js"></script>
 		<script src="app/account/account.controller.js"></script>
 		<script src="app/account/account.routes.js"></script>
+		<script src="app/account/terms/terms.controller.js"></script>
+		<script src="app/account/terms/terms.routes.js"></script>
 		<script src="app/app.config.js"></script>
 		<script src="app/app.routes.js"></script>
 		<script src="app/app.run.js"></script>
